# devAIagent

./: .gitignore  README.md  devAIteam  env.example  main.py  package.json  pyproject.toml  test_mlx.py
agents/: __init__.py  architect_agent.py  developer_agent.py  devops_agent.py  mcp_client.py  pm_agent.py  qa_agent.py  reviewer_agent.py  stitch_mcp.py  ui_designer_agent.py
config/: llm_config.py
deploy/: clean_runner.py  deploy_agent.py  deploy_runner.py  list_runner.py  mcp_runner.py  project_registry.py  rm_runner.py
fintrack_app/: pubspec.yaml
gestor_gastos/: pubspec.yaml
graphs/: __init__.py  architect_graph.py  developer_graph.py  devops_graph.py  pm_graph.py  qa_graph.py  reviewer_graph.py  ui_designer_graph.py
lib/: main.dart
lib/models/: budget.dart  category.dart  checklist.dart  expense.dart  user.dart  vessel.dart
lib/pages/: add_expense_page.dart  home_page.dart  login_page.dart
lib/providers/: auth_provider.dart  checklist_provider.dart  expense_provider.dart  vessel_provider.dart
lib/repositories/: auth_repository.dart  category_repository.dart  checklist_repository.dart  expense_repository.dart  vessel_repository.dart
lib/screens/: checklist_result_screen.dart  checklist_screen.dart  vessel_registration_screen.dart
lib/services/: api_service.dart
lib/views/: add_expense_view.dart  dashboard_view.dart  login_view.dart
output/tests/: add_expense_page_test.dart  add_expense_view_test.dart  expense.service.spec.ts  expenses.controller.spec.ts  expenses.service.spec.ts
src/: app.module.ts  main.ts
tools/: llm_helpers.py
(+133 files in other folders)
