[project]
name = "swdevaigency-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.5",
    "json-repair>=0.59.10",
    "langchain-core>=1.4.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "mcp>=1.27.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
devAIteam = "main:main"

